--- a/3_exam/answers/Answers.ipynb
+++ b/3_exam/answers/Answers.ipynb
@@ -1080,13 +1080,13 @@
     "\n",
     "Пусть $ g_{k, i} $ - градиент критерия оптимальности по $ i $-й переменной в $ k $-й итерации,\n",
     "\n",
-    "### $ G_{k, i} = \\sum_{j=1}^{k} (g_{j, i})^2 $\n",
+    "$$ G_{k, i} = \\sum_{j=1}^{k} (g_{j, i})^2 $$\n",
     "\n",
     "где $ G_{k, i} $ - сумма квадратов градиентов по $ i $-й переменной до $ k $-й итерации.\n",
     "\n",
     "Обновление $ i $-й переменной:\n",
     "\n",
-    "### $ x_{k+1, i} = x_{k, i} - \\frac{\\gamma}{\\sqrt{G_{k, i} + \\epsilon}} g_{k, i} $\n",
+    "$$ x_{k+1, i} = x_{k, i} - \\frac{\\gamma}{\\sqrt{G_{k, i} + \\epsilon}} g_{k, i} $$\n",
     "\n",
     "где $ \\gamma $ - скорость обучения, $ \\epsilon $ - малая константа, предотвращающая деление на ноль.\n",
     "\n",
@@ -1096,12 +1096,12 @@
     "\n",
     "Алгоритм RMSProp работает аналогично ADAGRAD, за исключением того, что квадраты градиента не накапливаются бесконечно. Вместо этого вводится процедура, которая поверхностно напоминает процедуру введения момента в градиентном алгоритме.\n",
     "\n",
-    "### $ G_{k+1, i} = \\omega G_{k, i} + (1 - \\omega) g_{k, i}^2  $\n",
+    "$$ G_{k+1, i} = \\omega G_{k, i} + (1 - \\omega) g_{k, i}^2  $$\n",
     "\n",
     "Типичное значение параметра $ \\omega $ - 0.9.\n",
     "\n",
     "Предположим, что $ g^2 $ постоянно. Когда выражение выше сходится, значение $ G $ в установившемся состоянии будет\n",
-    "### $ G = \\omega G + (1 - \\omega) g^2 $\n",
+    "$$ G = \\omega G + (1 - \\omega) g^2 $$\n",
     "Иными словами, $ G = g^2 $\n",
     "\n",
     "\n",
@@ -1111,17 +1111,17 @@
     "\n",
     "Сначала определяются вспомогательные величины:\n",
     "\n",
-    "### $ m_k = \\omega_1 m_{k-1} + (1 - \\omega_1) g_k $\n",
-    "### $ v_k = \\omega_2 v_{k-1} + (1 - \\omega_2) g_{k}^2 $\n",
+    "$$ m_k = \\omega_1 m_{k-1} + (1 - \\omega_1) g_k $$\n",
+    "$$ v_k = \\omega_2 v_{k-1} + (1 - \\omega_2) g_{k}^2 $$\n",
     "\n",
     "и их скорректированные версии:\n",
     "\n",
-    "### $ \\hat{m}_k = \\frac{m_k}{1 - \\omega_1^k} $\n",
-    "### $ \\hat{v}_k = \\frac{v_k}{1 - \\omega_2^k} $\n",
+    "$$ \\hat{m}_k = \\frac{m_k}{1 - \\omega_1^k} $$\n",
+    "$$ \\hat{v}_k = \\frac{v_k}{1 - \\omega_2^k} $$\n",
     "\n",
     "Затем текущее решение обновляется по алгоритму:\n",
     "\n",
-    "### $$ x_{k+1} = x_k - \\frac{\\gamma}{\\sqrt{\\hat{v}_k + \\epsilon}} \\hat{m}_k $$\n",
+    "$$ x_{k+1} = x_k - \\frac{\\gamma}{\\sqrt{\\hat{v}_k + \\epsilon}} \\hat{m}_k $$\n",
     "\n",
     "---\n"
    ]
@@ -1153,6 +1153,72 @@
    "source": [
     "# 15. Принципы оптимизации на основе PSO алгоритма\n",
     "\n",
+    "Алгоритм оптимизации роя частиц (Particle Swarm Optimization, PSO) представляет собой алгоритм поиска на основе популяции, основанный на имитации социального поведения животных, передвигающихся в больших группах (особенно птиц).\n",
+    "\n",
+    "Алгоритм PSO был широко исследован в течение многих лет из-за его конкурентоспособных результатов в различных приложениях. Основная цель алгоритма - исследовать пространство поиска интересов, используя группы частиц. Группа частиц формирует рой, который идентифицируется с популяцией в терминах эволюции. Каждая частица характеризуется своим текущим положением $x$, которое представляет потенциальное решение задачи оптимизации, и её текущей скоростью $v$. Скорость - это разница между текущим и предыдущим положением.\n",
+    "\n",
+    "Начальное положение каждой частицы устанавливается случайным образом в пределах области поиска, а начальные скорости случайным образом выбираются из предписанного интервала допустимых значений. Частицы вычисляют значения своих критериев на каждой итерации и используют эту информацию для обновления своего положения в пространстве поиска. Каждая частица помнит своё лучшее личное положение в истории поиска, обозначаемое как $p_{best}$, в то время как рой помнит лучшее глобальное положение в рое, обозначенное как $g_{best}$.\n",
+    "\n",
+    "В уравнении обновления положения частицы:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "v[k+1] &= w \\cdot v[k] + cp \\cdot rp[k] (p_{best}[k] - x[k]) + cg \\cdot rg[k] (g_{best}[k] - x[k]) \\\\\n",
+    "x[k+1] &= x[k] + v[k+1]\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Параметры $w$, $cp$ и $cg$ представляют инерционную, когнитивную и социальную компоненты, а $rp$ и $rg$ - независимые, равномерно распределенные случайные числа в диапазоне $[0, 1]$. Их значения изменяются для улучшения производительности, что приводит к различным модификациям алгоритма PSO.\n",
+    "\n",
+    "В уравнении для скорости частицы можно выделить две важные группы:\n",
+    "\n",
+    "* социальный член: $cg \\cdot rg[k] (g_{best}[k] - x[k])$\n",
+    "* когнитивный член: $cp \\cdot rp[k] (p_{best}[k] - x[k])$\n",
+    "\n",
+    "Алгоритм PSO включает следующие шаги:\n",
+    "\n",
+    "1. Инициализация: установка параметров алгоритма, таких как количество итераций, количество частиц, случайная инициализация положений частиц, случайная инициализация скоростей частиц и т. д.\n",
+    "2. Оптимизация - итерационные шаги:\n",
+    "    * Оценка пригодности каждой частицы, т.е. вычисление функции стоимости $f^i[k]$ для каждой частицы $x^i[k]$.\n",
+    "    * Обновление лучших индивидуальных и глобальных позиций и пригодностей:\n",
+    "    \n",
+    "      если $f^i[k] \\leq f^i_{p_{best}}$, то $f^i_{p_{best}} = f^i[k]$ и $p^i_{best}[k] = x^i[k]$\n",
+    "      \n",
+    "      если $f^i[k] \\leq f_{g_{best}}$, то $f_{g_{best}} = f^i[k]$ и $g_{best}[k] = x^i[k]$\n",
+    "    \n",
+    "    * Обновление скорости и положения каждой частицы.\n",
+    "3. Проверка критериев остановки.\n",
+    "\n",
+    "\n",
+    "## Тестирование алгоритма PSO\n",
+    "\n",
+    "Для проверки эффективности предложенного алгоритма PSO используется стандартная тестовая функция (Ackley, Griewank и др.).\n",
+    "\n",
+    "### Функция Ackley\n",
+    "\n",
+    "Функция Ackley широко используется для тестирования оптимизационных алгоритмов и описывается следующим образом:\n",
+    "\n",
+    "$$\n",
+    "f(x) = -a \\exp\\left(-b\\sqrt{\\frac{1}{d}\\sum_{i=1}^d{x_i^2}}\\right) - \\exp\\left(\\frac{1}{d}\\sum_{i=1}^d\\cos{(c x_i)}\\right) + a + \\exp(1)\n",
+    "$$\n",
+    "\n",
+    "Размерность: $d$\n",
+    "\n",
+    "Рекомендуемые значения переменных: $a = 20$, $b = 0.2$ и $c = 2\\pi$.\n",
+    "\n",
+    "Глобальный минимум: $f(0, \\ldots, 0) = 0$\n",
+    "\n",
+    "### Функция Griewank\n",
+    "\n",
+    "Функция Griewank имеет множество распространенных локальных минимумов, которые равномерно распределены. Сложность отображена на увеличенных участках графиков.\n",
+    "\n",
+    "$$\n",
+    "f(x) = 1 + \\frac{1}{4000} \\sum_{i=1}^d x_i^2 - \\prod_{i=1}^d \\cos\\left(\\frac{x_i}{\\sqrt{i}}\\right)\n",
+    "$$\n",
+    "\n",
+    "Глобальный минимум: $f(0, \\ldots, 0) = 0$\n",
+    "\n",
+    "Размерность: $d$\n",
     "\n",
     "---\n"
    ]
